Stop the board jumping once the winning/draw message is displayed

--- a/src/main/java/ttt/gui/presentation.css
+++ b/src/main/java/ttt/gui/presentation.css
@@ -22,7 +22,8 @@
 }
 
 #gameOverTargetId {
--fx-fill:WHITE;
+-fx-text-fill:WHITE;
+-fx-font-family: "Arial";
 -fx-font-size: 20px;
 -fx-font-weight:bold;
 }
